@@ -5,6 +5,7 @@ import boardgame.Board;
 import boardgame.Piece;
 import boardgame.Position;
 import chess.pieces.King;
+import chess.pieces.Pawn;
 import chess.pieces.Rook;
 
 import java.util.ArrayList;
@@ -79,7 +80,7 @@ public class ChessMatch {
 			throw new ChessException("You can't put yourself in check");
 		}
 
-		check = (testCheck(opponent(currentPlayer))) ? true : false;
+		check = testCheck(opponent(currentPlayer));
 
 		if (testCheckMate(opponent(currentPlayer))){
 			checkMate = true;
@@ -143,7 +144,7 @@ public class ChessMatch {
 	}
 
 	private ChessPiece king(Color color){
-		List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == color).collect(Collectors.toList());
+		List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == color).toList();
 		for (Piece p : list){
 			if (p instanceof King){
 				return (ChessPiece) p;
@@ -155,7 +156,7 @@ public class ChessMatch {
 
 	private boolean testCheck(Color color){
 		Position kingPosition = king(color).getChessPosition().toPosition();
-		List<Piece> opponentPieces = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == opponent(color)).collect(Collectors.toList());
+		List<Piece> opponentPieces = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == opponent(color)).toList();
 		for (Piece p : opponentPieces){
 			boolean[][] mat = p.possibleMoves();
 			if (mat[kingPosition.getRow()][kingPosition.getColumn()]){
@@ -169,7 +170,7 @@ public class ChessMatch {
 		if (!testCheck(color)){
 			return false;
 		}
-		List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == color).collect(Collectors.toList());
+		List<Piece> list = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == color).toList();
 		for (Piece p : list){
 			boolean[][] mat = p.possibleMoves();
 			for (int i = 0; i<board.getRows(); i++){
@@ -199,13 +200,30 @@ public class ChessMatch {
 	
 	
 	private void initialSetup() {
-		placeNewPiece('h', 7, new Rook(board, Color.WHITE));
-		placeNewPiece('d', 1, new Rook(board, Color.WHITE));
-		placeNewPiece('e', 1, new King(board, Color.WHITE));
+		placeNewPiece('a', 1, new Rook(board,Color.WHITE));
+		placeNewPiece('e', 1, new King(board,Color.WHITE));
+		placeNewPiece('h', 1, new Rook(board,Color.WHITE));
+		placeNewPiece('a', 2, new Pawn(board,Color.WHITE));
+		placeNewPiece('b', 2, new Pawn(board,Color.WHITE));
+		placeNewPiece('c', 2, new Pawn(board,Color.WHITE));
+		placeNewPiece('d', 2, new Pawn(board,Color.WHITE));
+		placeNewPiece('e', 2, new Pawn(board,Color.WHITE));
+		placeNewPiece('f', 2, new Pawn(board,Color.WHITE));
+		placeNewPiece('g', 2, new Pawn(board,Color.WHITE));
+		placeNewPiece('h', 2, new Pawn(board,Color.WHITE));
 
-
-		placeNewPiece('b', 8, new Rook(board, Color.BLACK));
-		placeNewPiece('a', 8, new King(board, Color.BLACK));
+		placeNewPiece('a', 8, new Rook(board,Color.BLACK));
+		placeNewPiece('e', 8, new King(board,Color.BLACK));
+		placeNewPiece('h', 8, new Rook(board,Color.BLACK));
+		placeNewPiece('a', 7, new Pawn(board,Color.BLACK));
+		placeNewPiece('b', 7, new Pawn(board,Color.BLACK));
+		placeNewPiece('c', 7, new Pawn(board,Color.BLACK));
+		placeNewPiece('d', 7, new Pawn(board,Color.BLACK));
+		placeNewPiece('e', 7, new Pawn(board,Color.BLACK));
+		placeNewPiece('f', 7, new Pawn(board,Color.BLACK));
+		placeNewPiece('g', 7, new Pawn(board,Color.BLACK));
+		placeNewPiece('h', 7, new Pawn(board,Color.BLACK));
+	}
 	}
 	
-}
+
